# server/src/routes/document.routes.ts
@@ -1,4 +1,4 @@
-import { addDocumentController, getAllDocumentsController, getDocumentByIdController, updateDocumentController } from '@controllers/document.controllers';
+import { addDocumentController, deleteDocumentController, getAllDocumentsController, getDocumentByIdController, updateDocumentController } from '@controllers/document.controllers';
 import {
   validateAddDocument,
   validateDocumentId,
@@ -12,9 +12,10 @@ import { authorizeRoles } from '@middlewares/role.middleware';
 
 const router = express.Router();
 
-router.post('/add', authenticateUser, authorizeRoles('PLANNER', 'DEVELOPER'), validateAddDocument, handleValidationErrors, addDocumentController); //Add Document
+router.post('/create', authenticateUser, authorizeRoles('PLANNER', 'DEVELOPER'), validateAddDocument, handleValidationErrors, addDocumentController); //Add Document
 router.get('/', authenticateUser, getAllDocumentsController); //Get All Documents
 router.get('/:id', authenticateUser, authorizeRoles('PLANNER', 'DEVELOPER'), validateDocumentId, getDocumentByIdController); // Get Document by ID
 router.put('/:id', authenticateUser, authorizeRoles('PLANNER', 'DEVELOPER'), validateDocumentId, validateUpdateDocument, handleValidationErrors, updateDocumentController);
+router.delete('/', deleteDocumentController);
 
 export const documentRoutes = router;
